@@ -1,3 +1,11 @@
+Sat Nov  7 05:28:03 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* esddsp.c: Hmmph. The ES1370 driver blocks on open unless
+	O_NONBLOCK is set explictly. So now we strcmp always, and
+	set O_NONBLOCK on fallback only for the sound device.
+
+	* esdlib.c: removed fsync's here too
+
 1998-11-06  Yo Ric Dude  <ricdude@ix.netcom.com>
 
 	* samples.c, players.c, proto.c: fixed rounding to multiple of 4
